--- a/NOTEBOOK/MODEL_TRAIN.ipynb
+++ b/NOTEBOOK/MODEL_TRAIN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "73b05f9f",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "55b74d5c",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "4ae4990e",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "fcaaaebe",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f75e2db2",
    "metadata": {},
    "outputs": [],
@@ -63,28 +63,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "ea6cbc98",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Index(['reading score', 'writing score'], dtype='object')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['reading score', 'writing score']\n"
+     ]
     }
    ],
    "source": [
-    "num_features"
+    "'num_features'\n",
+    "print(list(num_features))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "79045fcc",
    "metadata": {},
    "outputs": [],
@@ -95,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "a80a245d",
    "metadata": {},
    "outputs": [],
@@ -112,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "fbeec467",
    "metadata": {},
    "outputs": [],
@@ -122,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "f0698abe",
    "metadata": {},
    "outputs": [
@@ -132,7 +130,7 @@
        "(1000, 19)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "32498e59",
    "metadata": {},
    "outputs": [],
@@ -153,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "5a49461b",
    "metadata": {},
    "outputs": [],
@@ -163,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "ba60efc7",
    "metadata": {},
    "outputs": [
@@ -173,7 +171,7 @@
        "(800, 19)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "1c26ef3a",
    "metadata": {},
    "outputs": [
@@ -194,7 +192,7 @@
        "(200, 19)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "25bb63a2",
    "metadata": {},
    "outputs": [],
@@ -220,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "10d3c33b",
    "metadata": {},
    "outputs": [],
@@ -241,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "id": "fe08ac1e",
    "metadata": {},
    "outputs": [
@@ -329,10 +327,10 @@
       "R2_score:0.999307\n",
       "---------------------------------------------------------------\n",
       "Models accuracy  for test\n",
-      "Mean square error :92.375000\n",
-      "Mean Absolute error :7.625000\n",
-      "Root mean squared error:9.611191\n",
-      "R2_score:0.620385\n",
+      "Mean square error :85.680000\n",
+      "Mean Absolute error :7.330000\n",
+      "Root mean squared error:9.256349\n",
+      "R2_score:0.647898\n",
       "Linear_reg\n",
       "Models accuracy  for training\n",
       "Mean square error :28.380544\n",
@@ -347,28 +345,28 @@
       "R2_score:0.879740\n",
       "Ada_boost\n",
       "Models accuracy  for training\n",
-      "Mean square error :34.317731\n",
-      "Mean Absolute error :4.785154\n",
-      "Root mean squared error:5.858134\n",
-      "R2_score:0.847779\n",
+      "Mean square error :33.618576\n",
+      "Mean Absolute error :4.738296\n",
+      "Root mean squared error:5.798153\n",
+      "R2_score:0.850881\n",
       "---------------------------------------------------------------\n",
       "Models accuracy  for test\n",
-      "Mean square error :36.156311\n",
-      "Mean Absolute error :4.641539\n",
-      "Root mean squared error:6.013012\n",
-      "R2_score:0.851416\n",
+      "Mean square error :36.137673\n",
+      "Mean Absolute error :4.701538\n",
+      "Root mean squared error:6.011462\n",
+      "R2_score:0.851492\n",
       "Random_forest\n",
       "Models accuracy  for training\n",
-      "Mean square error :5.291743\n",
-      "Mean Absolute error :1.835536\n",
-      "Root mean squared error:2.300379\n",
-      "R2_score:0.976528\n",
+      "Mean square error :5.283813\n",
+      "Mean Absolute error :1.824958\n",
+      "Root mean squared error:2.298655\n",
+      "R2_score:0.976563\n",
       "---------------------------------------------------------------\n",
       "Models accuracy  for test\n",
-      "Mean square error :36.099269\n",
-      "Mean Absolute error :4.652425\n",
-      "Root mean squared error:6.008267\n",
-      "R2_score:0.851650\n"
+      "Mean square error :36.084100\n",
+      "Mean Absolute error :4.673692\n",
+      "Root mean squared error:6.007004\n",
+      "R2_score:0.851712\n"
      ]
     }
    ],
